--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -8,8 +8,8 @@
 // scss-docs-start gray-color-variables
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
-$gray-300: #dee2e6 !default;
+$gray-200: #F2F2F2;
+$gray-300: #BBBBBB;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
 $gray-600: #6c757d !default;
@@ -38,12 +38,12 @@ $grays: (
 // scss-docs-start color-variables
 $blue:    #0d6efd !default;
 $indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
+$purple:  #4C4DAA;
 $pink:    #d63384 !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
+$red:     #EC4A27;
+$orange:  #E25F3C;
 $yellow:  #ffc107 !default;
-$green:   #198754 !default;
+$green:   #41AF75;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
 // scss-docs-end color-variables
@@ -96,7 +96,7 @@ $indigo-700: shade-color($indigo, 40%) !default;
 $indigo-800: shade-color($indigo, 60%) !default;
 $indigo-900: shade-color($indigo, 80%) !default;
 
-$purple-100: tint-color($purple, 80%) !default;
+$purple-100: #E9EBFF;
 $purple-200: tint-color($purple, 60%) !default;
 $purple-300: tint-color($purple, 40%) !default;
 $purple-400: tint-color($purple, 20%) !default;
@@ -132,7 +132,7 @@ $orange-300: tint-color($orange, 40%) !default;
 $orange-400: tint-color($orange, 20%) !default;
 $orange-500: $orange !default;
 $orange-600: shade-color($orange, 20%) !default;
-$orange-700: shade-color($orange, 40%) !default;
+$orange-700: #E98055;
 $orange-800: shade-color($orange, 60%) !default;
 $orange-900: shade-color($orange, 80%) !default;
 
@@ -436,7 +436,7 @@ $position-values: (
 
 $body-text-align:           null !default;
 $body-color:                $gray-900 !default;
-$body-bg:                   $white !default;
+$body-bg:                   $gray-200;
 
 $body-secondary-color:      rgba($body-color, .75) !default;
 $body-secondary-bg:         $gray-200 !default;
@@ -630,8 +630,8 @@ $line-height-base:            1.5 !default;
 $line-height-sm:              1.25 !default;
 $line-height-lg:              2 !default;
 
-$h1-font-size:                $font-size-base * 2.5 !default;
-$h2-font-size:                $font-size-base * 2 !default;
+$h1-font-size:                rem(90);
+$h2-font-size:                rem(50);
 $h3-font-size:                $font-size-base * 1.75 !default;
 $h4-font-size:                $font-size-base * 1.5 !default;
 $h5-font-size:                $font-size-base * 1.25 !default;
