--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -2,10 +2,10 @@ mixin headerBlock()
 	// start headerBlock
 	+b.headerBlock.section#headerBlock&attributes(attributes)
 		.container
-			+b.section-title.text-center
-				h2 headerBlock ds dfsdfdsfsd
-				+icon('telegram')
-				+iconC('telegram')
+			+b.section-title
+				h1 Бизнес.<br>Поколение
+				.sub-text #[span Бесплатная] онлайн-программа по развитию предпринимательских компетенций и старту бизнеса
+
 			.row
 						
 	// end headerBlock
