--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -3,9 +3,7 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()}; 
-	min-height: 100vh;
-	min-height: calc(var(--vh, 1vh) * 100);
-	
+  background: $primary;
 	
 	&__row{
 		// --bs-gutter-x: #{rem()};
@@ -13,7 +11,7 @@
 
 	}
 	.section-title{
-		
+		color: $white;
 	}
 	&__col{
 
