--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -1,62 +1,83 @@
 .footer {
-		
-	margin-top: auto;
-// --sPT: #{rem()};
-	// --sPB: #{rem()};
+	--sPT: #{rem(20)};
+	--sPB: #{rem(20)};
 	// --sTPB: #{rem()};
-	&__row{
-		// --bs-gutter-x: #{rem()};
+	margin-top: auto;
+	background-color: $gray-100;
+	@include media-breakpoint-up(lg) {
+		--sPT: #{rem(30)};
+		--sPB: #{rem(30)};
+	}
+	&__row {
+		--bs-gutter-x: #{rem(20)};
 		--bs-gutter-y: var(--bs-gutter-x);
 
+		align-items: center;
+		@include media-breakpoint-up(lg) {
+			--bs-gutter-x: #{rem(40)};
+		}
 	}
-	.section-title{
-		
+	img {
+		max-width: 100%;
 	}
-	&__col{
-
+	a {
+		font-size: rem(13);
+		opacity: 0.6;
+		color: #000;
+		text-decoration: underline;
+		&:hover {
+			opacity: 1;
+		}
 	}
-	&__item{
-
+	//
+	@include media-breakpoint-up(xl) {
 	}
-	&__slide{
-		height: auto;
+
+	@include media-breakpoint-up(lg) {
 	}
-// 
-@include media-breakpoint-up(xl) {}
 
-@include media-breakpoint-up(lg) {}
+	@include media-breakpoint-up(md) {
+	}
 
-@include media-breakpoint-up(md) {}
+	@include media-breakpoint-up(sm) {
+	}
 
-@include media-breakpoint-up(sm) {}
+	@include media-breakpoint-up(xs) {
+	}
 
-@include media-breakpoint-up(xs) {}
+	//
+	@include media-breakpoint-between(md, xl) {
+	}
 
+	//
+	@include media-breakpoint-only(xs) {
+	}
 
-// 
-@include media-breakpoint-between(md, xl) {}
+	@include media-breakpoint-only(sm) {
+	}
 
+	@include media-breakpoint-only(md) {
+	}
 
-// 
-@include media-breakpoint-only(xs) {}
+	@include media-breakpoint-only(lg) {
+	}
 
-@include media-breakpoint-only(sm) {}
+	@include media-breakpoint-only(xl) {
+	}
 
-@include media-breakpoint-only(md) {}
+	//
+	@include media-breakpoint-down(xl) {
+	}
 
-@include media-breakpoint-only(lg) {}
+	@include media-breakpoint-down(lg) {
+	}
 
-@include media-breakpoint-only(xl) {}
+	@include media-breakpoint-down(md) {
+	}
 
+	@include media-breakpoint-down(sm) {
+	}
 
-// 
-@include media-breakpoint-down(xl) {}
-
-@include media-breakpoint-down(lg) {}
-
-@include media-breakpoint-down(md) {}
-
-@include media-breakpoint-down(sm) {}
-
-@include media-breakpoint-down(xs) {}
+	@include media-breakpoint-down(xs) {
+	}
 }
