--- a/sourse/sass/_fonts.scss
+++ b/sourse/sass/_fonts.scss
@@ -1,14 +1,25 @@
-
 // $file-form: ($file-formats: woff2 woff ttf);
-
-
 
 // If font from googlefont, next lines remove
 
-// @include font-face ($default-font, $addr + "Roboto-Regular/Roboto-Regular", $file-formats: $file-format);
-// @include font-face ($default-font, $addr + "Roboto-Bold/Roboto-Bold", bold, $file-formats: $file-format);
-// @include font-face ($default-font, $addr + "Roboto-Medium/Roboto-Medium", 500, $file-formats: $file-format);
-// @include font-face ($default-font, $addr + "Roboto-Black/Roboto-Black", 900, $file-formats: $file-format);
+@include font-face(
+	$default-font,
+	$addr + "GTEestiProDisplay/GTEestiProDisplay-Regular",
+	400,
+	$file-formats: $file-format
+);
+@include font-face(
+	$default-font,
+	$addr + "GTEestiProDisplay/GTEestiProDisplay-Bold",
+	bold,
+	$file-formats: $file-format
+);
+@include font-face(
+	$default-font,
+	$addr + "GTEestiProDisplay/GTEestiProDisplay-Medium",
+	500,
+	$file-formats: $file-format
+);
 
 // font-weight helper:
 // 100 Thin
