feat: add headerblock and particioants block

--- a/sourse/pug/blocks/header/_header.scss
+++ b/sourse/pug/blocks/header/_header.scss
@@ -2,6 +2,7 @@
 	// start .header
 	.header {
 		 
+  background: $primary;
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
