--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -1,27 +1,178 @@
 // start .headerBlock
 .headerBlock {
-	// --sPT: #{rem()};
-	// --sPB: #{rem()};
-	// --sTPB: #{rem()}; 
+	--sPT: #{rem(70)};
+	--sPB: #{rem(122)};
+	--sTPB: #{rem(86)}; 
   background: $primary;
+  @include media-breakpoint-up(lg) {
+    --sPB: #{rem(62)};
+  }
 	
 	&__row{
 		// --bs-gutter-x: #{rem()};
-		--bs-gutter-y: var(--bs-gutter-x);
-
+		--bs-gutter-y: #{rem(30)};
 	}
-	.section-title{
+
+	.section-title {
 		color: $white;
 	}
+  .container {
+  }
+
+  h1 {
+    margin-bottom: rem(35);
+    position: relative;
+    display: inline-block;
+  }
+
+  .sub-text {
+    font-weight: 500;
+    font-size: rem(25);
+    max-width: rem(698);
+    line-height: 1.12;
+
+    span {
+      background: $green;
+      padding: rem(4);
+    }
+  }
+
 	&__col{
 
+    position: relative;
+    &:first-child {
+      @include media-breakpoint-up(lg) {
+        margin-left: rem(-10);
+        margin-right: rem(10);
+      }
+    }
 	}
-	&__item{
 
+  .drops {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 0;
+    transform: translate(-6%, -14%);
+    max-width: 120vw;
+    @include media-breakpoint-up(lg) {
+      max-width: 80vw;
+    }
+  }
+
+  .disks {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    transform: translate(-13%, -18%);
+  }
+
+  .puzzle-orange, .puzzles {
+    position: absolute;
+  }
+
+  .puzzle-orange {
+    top: 0;
+    left: 20%;
+    z-index: 1;
+    @include media-breakpoint-up(lg) {
+      top: -47px;
+      left: -18%;
+    }
+  }
+
+  .puzzles {
+    bottom: -138px;
+    right: -47%;
+    z-index: 2;
+  }
+
+  .coursor {
+    position: absolute;
+    top: 30%;
+    left: 101%;
+    max-width: rem(50);
+    @include media-breakpoint-up(sm) {
+      max-width: none;
+      left: 110%;
+    }
+    @include media-breakpoint-up(lg) {
+      top: 60%;
+    }
+  }
+
+  p {
+    line-height: 1.2;
+    margin-bottom: rem(24);
+  }
+
+  &__block {
+    max-width: rem(760);
+  }
+	&__item {
+    z-index: 1;
+    position: relative;
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: calc(100% + 50px);
+        background: inherit;
+        z-index: -1;
+        border-radius: inherit;
+      }
+    padding: rem(29) rem(30);
+    border-radius: rem(30);
+    &:first-child {
+      font-weight: 700;
+      font-size: 18px;
+      color: $orange;
+      background: $white;
+    }
+
+    &:nth-child(2) {
+      background: $orange;
+      color: $white;
+      &::after {
+        @include media-breakpoint-down(lg) {
+          background: transparent;
+        }
+      }
+
+    }
 	}
-	&__slide{
-		height: auto;
-	}
+	
+  &__img-wrap {
+    width: rem(348);
+    max-width: 100%;
+    border-radius: rem(45);
+    position: relative;
+    z-index: 1;
+    
+	@include media-breakpoint-up(lg) {
+    margin-top: rem(-36);
+  }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: -1px;
+      left: -1px;
+      width: calc(100% + 2px);
+      height: calc(100% + 2px);
+      background: linear-gradient(295deg, #fff 0%, rgba(247, 247, 247, 0.75) 16%, rgba(234, 234, 234, 0.36) 42%, rgba(230, 230, 230, 0.2) 54%, rgba(230, 230, 230, 0.22) 59%, rgba(232, 232, 232, 0.29) 65%, rgba(236, 236, 236, 0.41) 73%, rgba(241, 241, 241, 0.57) 82%, rgba(247, 247, 247, 0.77) 91%, #fff 100%);
+      z-index: -1;
+      border-radius: inherit;
+    }
+  }
+  .img {
+    max-width: 100%;
+    border-radius: inherit;
+  }
 
 	@include media-breakpoint-up(xl) {}
 
