--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -6,7 +6,7 @@ include ../blocks/sContent/_sContent.pug
  
 include ../blocks/sContact/_sContact.pug
 include ../blocks/sForm/_sForm.pug
-include ../blocks/sForm/_sForm.pug
+include ../blocks/sParticipating/_sParticipating.pug
 include ../blocks/sCatalog/_sCatalog.pug
 
 block variables
@@ -23,7 +23,7 @@ block pagecontent
 	+parts('header')
 	main
 		+headerBlock 
-		+sCatalog
+		+sParticipating
 		+sForm()
 		+sContact()
 		
