--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -7,6 +7,16 @@
 	fill: currentColor;
 }
 
+.icon-arrow {
+	$h: 15;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(30 / #{$h} *1em );
+}
+.icon-arrow-hand {
+	$h: 72;
+	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
+	width: calc(99 / #{$h} *1em );
+}
 .icon-basket {
 	$h: 24;
 	font-size:calc( #{$h} / #{$rfs-rem-value} * 1rem);
