--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -12,7 +12,7 @@ $gray-200: #F2F2F2;
 $gray-300: #BBBBBB;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
+$gray-600: #838383;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
@@ -505,7 +505,7 @@ $container-max-widths: (
   md: 720px,
   lg: 960px,
   xl: 1140px,
-  xxl: 1320px
+  xxl: 1260px
 ) !default;
 // scss-docs-end container-max-widths
 
