--- a/sourse/pug/blocks/sFAQ/_sFAQ.pug
+++ b/sourse/pug/blocks/sFAQ/_sFAQ.pug
@@ -5,12 +5,12 @@ mixin sFAQ(data)
 			+b.section-title
 				h2 Часто задаваемые вопросы:
 			+ddGroup
+				+ddGroupItem('Какие навыки и знания я получу, участвуя в программе «Бизнес.Поколение»?', 'active')
+					p Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.
+				+ddGroupItem('Как проходит программа?')
+					p Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.
 				+ddGroupItem('Кто может участвовать в программе?')
-					p Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.
-				+ddGroupItem('Какие сферы бизнеса имеют приоритет при отборе?')
-					p Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.
-				+ddGroupItem('Каковы основные цели и задачи программы?')
-					p Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.
-				+ddGroupItem('Как происходит процесс регистрации?', 'active')
-					p Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.
+					p Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.
+				+ddGroupItem('Какие сроки проведения программы?')
+					p Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.
 	// end sFAQ
