--- a/sourse/sass/_fonts.scss
+++ b/sourse/sass/_fonts.scss
@@ -3,19 +3,19 @@
 // If font from googlefont, next lines remove
 
 @include font-face(
-	$default-font,
+	'GTEestiProDisplay',
 	$addr + "GTEestiProDisplay/GTEestiProDisplay-Regular",
 	400,
 	$file-formats: $file-format
 );
 @include font-face(
-	$default-font,
+	'GTEestiProDisplay',
 	$addr + "GTEestiProDisplay/GTEestiProDisplay-Bold",
 	bold,
 	$file-formats: $file-format
 );
 @include font-face(
-	$default-font,
+	'GTEestiProDisplay',
 	$addr + "GTEestiProDisplay/GTEestiProDisplay-Medium",
 	500,
 	$file-formats: $file-format
