--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -7,6 +7,7 @@ include ../blocks/sContent/_sContent.pug
 include ../blocks/sContact/_sContact.pug
 include ../blocks/sForm/_sForm.pug
 include ../blocks/sParticipating/_sParticipating.pug
+include ../blocks/sSpeakers/_sSpeakers.pug
 include ../blocks/sCatalog/_sCatalog.pug
 include ../blocks/sFAQ/_sFAQ.pug
 
@@ -25,7 +26,7 @@ block pagecontent
 	main
 		+headerBlock 
 		+sParticipating
-		+sForm()
+		+sSpeakers
 		+sFAQ()
 		+sContact()
 		
