--- a/sourse/pug/blocks/sSpeakers/_sSpeakers.scss
+++ b/sourse/pug/blocks/sSpeakers/_sSpeakers.scss
@@ -71,7 +71,6 @@
 
   img {
     max-width: 100%;
-    border-radius: 0 0 50% 50%;
   }
 
   &__img-wrap {
@@ -80,7 +79,8 @@
     z-index: 1;
     width: rem(324);
     max-width: 100%;
-    // max-width: max-content;
+    border-radius: 0 0 46% 46%;
+    overflow: hidden;
 
     &::before {
       content: '';
