--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -120,31 +120,32 @@
 		background-color: #fff;
 		border-radius: rem(16);
 		&:not(:last-child) {
-			margin-bottom: rem(11.400);
+			margin-bottom: rem(8.193);
 		}
 		&.active {
 			background-color: #E9EBFF;
 			.dd-group__head {
-				padding: rem(67.200) rem(59.207) rem(10.400) rem(43.200);
+				padding: rem(24) rem(32) 0 rem(24);
+				@include media-breakpoint-up(md) {
+					padding: rem(64) rem(74.847) 0 rem(44.8);
+				}
 				&:after {
-					transform: translateY(-50%) rotate(45deg);
+					transform: translateY(-50%) rotate(90deg);
+					background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='24' height='24' rx='12' fill='%23E98055'/%3E%3Cpath d='M12 6L12 18' stroke='white' stroke-width='2'/%3E%3C/svg%3E%0A");
 				}
 			}
-			// .dd-group__content {
-			// 	padding: rem(12) rem(48) rem(48) rem(48);
-			// }
 		}
 	}
 	&__head {
 		@include mt;
-		padding: rem(24) rem(48);
+		padding: rem(24) rem(32) rem(24) rem(24);
 		font-weight: 600;
 		color: #1B1A1D;
 		position: relative;
 		font-size: rem(18);
 		cursor: pointer;
 		@include media-breakpoint-up(md) {
-			// padding: rem(39.200) rem(65) rem(39.200) rem(21);
+			padding: rem(24) rem(48) rem(24) rem(48);
 			font-size: rem(24);
 		}
 		&:after {
@@ -153,11 +154,15 @@
 			position: absolute;
 			top: 50%;
 			transform: translateY(-50%);
-			right: rem(21);
-			width: rem(21);
-			height: rem(21);
+			right: rem(12);
+			width: rem(24);
+			height: rem(24);
+			@include media-breakpoint-up(md) {
+				right: rem(48.193);
+			}
 
-			background-image: url("data:image/svg+xml,%3Csvg width='24' height='25' viewBox='0 0 24 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect y='0.5' width='24' height='24' rx='12' fill='%23E98055'/%3E%3Cpath d='M6 12.5H18' stroke='white' stroke-width='2'/%3E%3C/svg%3E%0A");
+			
+			background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='24' height='24' rx='12' fill='%23E98055'/%3E%3Cpath d='M6 12H18' stroke='white' stroke-width='2'/%3E%3Cpath d='M12 6L12 18' stroke='white' stroke-width='2'/%3E%3C/svg%3E%0A");
 			background-repeat: no-repeat;
 			background-size: contain;
 			background-position: center;
@@ -165,7 +170,10 @@
 	}
 	&__content {
 		display: none;
-		padding: rem(12) rem(54.407) rem(48) rem(43.200);
+		padding: rem(7.200) rem(32) rem(24) rem(24);
+		@include media-breakpoint-up(md) {
+			padding: rem(7.200) rem(54.407) rem(57.600) rem(48);
+		}
 		&.active {
 			display: block;
 		}
