--- a/sourse/pug/blocks/sFAQ/_sFAQ.scss
+++ b/sourse/pug/blocks/sFAQ/_sFAQ.scss
@@ -5,14 +5,31 @@
 	--sTPB: #{rem(27)};
 	@include media-breakpoint-up(lg) {
 		--sPT: #{rem(60)};
-		--sPB: #{rem(60)};
-		--sTPB: #{rem(47)};
+		--sPB: #{rem(106.400)};
+		--sTPB: #{rem(50.200)};
+	}
+	&__container {
+		position: relative;
+		z-index: 1;
+		.bg {
+			position: absolute;
+			display: none;
+			top: rem(31);
+			right: rem(-144);
+			z-index: -1;
+			@include media-breakpoint-up(sm) {
+				display: block;
+			}
+			@include media-breakpoint-up(xl) {
+				right: rem(36);
+			}
+		}
 	}
 	.section-title {
 		color: #494F90;
 	}
 	.dd-group {
-		max-width: rem(768);
+		max-width: rem(784);
 		&__item {
 			// max-width: rem();
 		}
