--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -5,7 +5,8 @@ include ../blocks/sForm/_sForm.pug
 include ../blocks/sContent/_sContent.pug
  
 include ../blocks/sContact/_sContact.pug
-include ../blocks/sForm/_sForm.pug
+include ../blocks/sPartners/_sPartners.pug
+include ../blocks/sRegistration/_sRegistration.pug
 include ../blocks/sParticipating/_sParticipating.pug
 include ../blocks/sCatalog/_sCatalog.pug
 include ../blocks/sFAQ/_sFAQ.pug
@@ -25,7 +26,8 @@ block pagecontent
 	main
 		+headerBlock 
 		+sParticipating
-		+sForm()
+		+sRegistration()
+		+sPartners()
 		+sFAQ()
 		+sContact()
 		
