--- a/sourse/pug/blocks/sSpeakers/_sSpeakers.scss
+++ b/sourse/pug/blocks/sSpeakers/_sSpeakers.scss
@@ -1,7 +1,7 @@
 // start .sSpeakers
 .sSpeakers {
 	--sPT: #{rem(108)};
-	// --sPB: #{rem()};
+	--sPB: #{rem(173.200)};
 	--sTPB: #{rem(68)};
 	
   background: $primary;
