--- a/sourse/pug/blocks/sRegistration/_sRegistration.scss
+++ b/sourse/pug/blocks/sRegistration/_sRegistration.scss
@@ -1,21 +1,83 @@
 // start .sRegistration
 .sRegistration {
-	// --sPT: #{rem()};
-	// --sPB: #{rem()};
-	// --sTPB: #{rem()};
-	
+	--sPT: #{rem(0)};
+	--sPB: #{rem(33)};
+	--sTPB: #{rem(30)};
+	@include media-breakpoint-up(lg) {
+		--sTPB: #{rem(62.400)};
+	}
+
+	margin-top: rem(-91);
+	&__wrap {
+		padding: rem(66) rem(20) rem(20) rem(20);
+		background-color: $gray-200;
+		border-radius: rem(60);
+	}
+	&__container {
+		@include media-breakpoint-up(xxl) {
+			max-width: rem(1383);
+		}
+	}
 	&__row{
-		// --bs-gutter-x: #{rem()};
-		// --bs-gutter-y: #{rem()};
+		max-width: rem(1160);
+		margin: 0 auto;
+		.row {
+			--bs-gutter-x: #{rem(24)};
+			--bs-gutter-y: #{rem(24)};
+		}
+		span {
+			display: block;
+			max-width: max-content;
+			margin: rem(20) auto 0 auto;
+			font-size: rem(18);
+			font-weight: 600;
+			color: $gray-300;
+			text-align: center;
+		}
 	}
 	.section-title{
-		
+		h2 {
+			margin-bottom: rem(21);
+		}
 	}
 	&__col{
 		
 	}
 	&__item{
-		
+		display: flex;
+		flex-direction: column;
+		position: relative;
+		padding: rem(22);
+		border-radius: rem(25);
+		background-color: $green;
+		color: #fff;
+		font-weight: 600;
+		font-size: rem(18);
+		line-height: 1.16;
+		@include media-breakpoint-up(lg) {
+			padding: rem(30) rem(86) rem(30) rem(23.6);
+		}
+		&:after {
+			content: '';
+			display: block;
+			width: rem(48);
+			height: rem(48);
+			margin-top: rem(12);
+
+			background-image: url("data:image/svg+xml,%3Csvg width='68' height='68' viewBox='0 0 68 68' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='4.86572' y='4.36572' width='58.2687' height='58.2687' rx='29.1343' fill='white'/%3E%3Cpath d='M48.4891 34.2348C48.9041 33.8407 48.9439 33.2088 48.5779 32.8234L42.6138 26.5436C42.2478 26.1582 41.6147 26.1653 41.1997 26.5595C40.7847 26.9536 40.7449 27.5855 41.1109 27.9709L46.4123 33.553L40.4007 39.2623C39.9857 39.6564 39.9459 40.2884 40.3119 40.6737C40.6779 41.0591 41.311 41.052 41.726 40.6578L48.4891 34.2348ZM19.6305 34.8515L47.7636 34.5351L47.8892 32.539L19.756 32.8555L19.6305 34.8515Z' fill='%23636363'/%3E%3C/svg%3E%0A");
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: contain;
+			@include media-breakpoint-up(lg) {
+				position: absolute;
+				top: 50%;
+				transform: translateY(-50%);
+				right: rem(17);
+				width: rem(68);
+				height: rem(68);
+				margin-top: 0;
+			}
+		}
 	}
 
 	@include media-breakpoint-up(xl) {}
