--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -123,11 +123,11 @@
 			margin-bottom: rem(8.193);
 		}
 		&.active {
-			background-color: #E9EBFF;
+			background-color: #e9ebff;
 			.dd-group__head {
-				padding: rem(24) rem(32) 0 rem(24);
+				padding: rem(24) rem(42) 0 rem(24);
 				@include media-breakpoint-up(md) {
-					padding: rem(64) rem(74.847) 0 rem(44.8);
+					padding: rem(64) rem(78) 0 rem(44.8);
 				}
 				&:after {
 					transform: translateY(-50%) rotate(90deg);
@@ -138,19 +138,19 @@
 	}
 	&__head {
 		@include mt;
-		padding: rem(24) rem(32) rem(24) rem(24);
+		padding: rem(24) rem(42) rem(24) rem(24);
 		font-weight: 600;
-		color: #1B1A1D;
+		color: #1b1a1d;
 		position: relative;
 		font-size: rem(18);
 		cursor: pointer;
 		@include media-breakpoint-up(md) {
-			padding: rem(24) rem(48) rem(24) rem(48);
+			padding: rem(24) rem(78) rem(24) rem(48);
 			font-size: rem(24);
 		}
 		&:after {
 			@include mt;
-			content: '';
+			content: "";
 			position: absolute;
 			top: 50%;
 			transform: translateY(-50%);
@@ -161,7 +161,6 @@
 				right: rem(48.193);
 			}
 
-			
 			background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='24' height='24' rx='12' fill='%23E98055'/%3E%3Cpath d='M6 12H18' stroke='white' stroke-width='2'/%3E%3Cpath d='M12 6L12 18' stroke='white' stroke-width='2'/%3E%3C/svg%3E%0A");
 			background-repeat: no-repeat;
 			background-size: contain;
@@ -170,9 +169,9 @@
 	}
 	&__content {
 		display: none;
-		padding: rem(7.200) rem(32) rem(24) rem(24);
+		padding: rem(7.2) rem(42) rem(24) rem(24);
 		@include media-breakpoint-up(md) {
-			padding: rem(7.200) rem(54.407) rem(57.600) rem(48);
+			padding: rem(7.2) rem(78) rem(57.6) rem(48);
 		}
 		&.active {
 			display: block;
@@ -181,7 +180,7 @@
 			max-width: rem(1079);
 			margin-bottom: 0;
 			font-size: rem(16);
-			color: #43485A;
+			color: #43485a;
 			max-width: rem(470);
 		}
 	}
