feat: edit first and second block, change colors

--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -5,10 +5,8 @@ mixin headerBlock()
 
 			+e.row.row
 				+e.col.col-12.col-lg-8
-					+img('img/svg/drops.svg').drops
 					+b.section-title
 						h1 Бизнес.<br>Поколение
-							+img('img/svg/coursor.svg').coursor
 						.sub-text #[span Бесплатная] онлайн-программа по развитию предпринимательских компетенций и старту бизнеса
 					+e.block
 						+e.item Наша миссия – помочь воплотить твою мечту или идею в реальный бизнес.
@@ -18,8 +16,7 @@ mixin headerBlock()
 
 				+e.col.col-12.col-lg-4
 					+img('img/puzzle-orange.png').puzzle-orange
-					+img('img/svg/disks.svg').disks
+					+img('img/puzzles.png').puzzles
 					+e.img-wrap.ms-auto
-						+img('img/puzzles.png').puzzles
-						+img('img/headerBlock-img.png').img
+						+img('img/headerBlock-img-1.png').img
 	// end headerBlock
