--- a/sourse/pug/blocks/sSpeakers/_sSpeakers.pug
+++ b/sourse/pug/blocks/sSpeakers/_sSpeakers.pug
@@ -4,7 +4,7 @@ mixin sSpeakers(data)
 		.container
 			+img('img/puzzle-orange.png').puzzle-orange-2
 			+img('img/puzzle-orange.png').puzzle-orange
-			+img('img/svg/disk.svg').disk
+			//- +img('img/svg/disk.svg').disk
 			+b.section-title.text-center
 				h2 Спикеры
 			+e.row.row
