--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -1,7 +1,7 @@
 // start .headerBlock
 .headerBlock {
 	--sPT: #{rem(70)};
-	--sPB: #{rem(122)};
+	--sPB: #{rem(58)};
 	--sTPB: #{rem(86)}; 
   background: $primary;
   @include media-breakpoint-up(lg) {
@@ -29,11 +29,24 @@
     font-weight: 500;
     font-size: rem(25);
     max-width: rem(698);
-    line-height: 1.12;
+    line-height: 1.2;
 
     span {
-      background: $green;
-      padding: rem(4);
+      position: relative;
+      z-index: 1;
+      margin-right: rem(4);
+      &::before {
+        content: '';
+        position: absolute;
+        left: -8px;
+        top: -2px;
+        z-index: -1;
+        background: $green;
+        width: calc(100% + 16px);
+        height: 118%;
+        padding: rem(4) rem(8);
+        border-radius: rem(100);
+      }
     }
   }
 
@@ -48,25 +61,25 @@
     }
 	}
 
-  .drops {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 0;
-    transform: translate(-6%, -14%);
-    max-width: 120vw;
-    @include media-breakpoint-up(lg) {
-      max-width: 80vw;
-    }
-  }
+  // .drops {
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   z-index: 0;
+  //   transform: translate(-6%, -14%);
+  //   max-width: 120vw;
+  //   @include media-breakpoint-up(lg) {
+  //     max-width: 80vw;
+  //   }
+  // }
 
-  .disks {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 0;
-    transform: translate(-13%, -18%);
-  }
+  // .disks {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   z-index: 0;
+  //   transform: translate(-13%, -18%);
+  // }
 
   .puzzle-orange, .puzzles {
     position: absolute;
@@ -77,30 +90,30 @@
     left: 20%;
     z-index: 1;
     @include media-breakpoint-up(lg) {
-      top: -47px;
-      left: -18%;
+      top: 16px;
+      left: -12%;
     }
   }
 
   .puzzles {
-    bottom: -138px;
-    right: -47%;
-    z-index: 2;
+    bottom: 42%;
+    right: -49%;
+    // z-index: 2;
   }
 
-  .coursor {
-    position: absolute;
-    top: 30%;
-    left: 101%;
-    max-width: rem(50);
-    @include media-breakpoint-up(sm) {
-      max-width: none;
-      left: 110%;
-    }
-    @include media-breakpoint-up(lg) {
-      top: 60%;
-    }
-  }
+  // .coursor {
+  //   position: absolute;
+  //   top: 30%;
+  //   left: 101%;
+  //   max-width: rem(50);
+  //   @include media-breakpoint-up(sm) {
+  //     max-width: none;
+  //     left: 110%;
+  //   }
+  //   @include media-breakpoint-up(lg) {
+  //     top: 60%;
+  //   }
+  // }
 
   p {
     line-height: 1.2;
@@ -145,33 +158,25 @@
 
     }
 	}
-	
+
   &__img-wrap {
-    width: rem(348);
+    width: rem(607);
     max-width: 100%;
     border-radius: rem(45);
     position: relative;
+    height: 100%;
     z-index: 1;
-    
-	@include media-breakpoint-up(lg) {
-    margin-top: rem(-36);
   }
 
-    &::after {
-      content: '';
-      position: absolute;
-      top: -1px;
-      left: -1px;
-      width: calc(100% + 2px);
-      height: calc(100% + 2px);
-      background: linear-gradient(295deg, #fff 0%, rgba(247, 247, 247, 0.75) 16%, rgba(234, 234, 234, 0.36) 42%, rgba(230, 230, 230, 0.2) 54%, rgba(230, 230, 230, 0.22) 59%, rgba(232, 232, 232, 0.29) 65%, rgba(236, 236, 236, 0.41) 73%, rgba(241, 241, 241, 0.57) 82%, rgba(247, 247, 247, 0.77) 91%, #fff 100%);
-      z-index: -1;
-      border-radius: inherit;
-    }
-  }
   .img {
     max-width: 100%;
-    border-radius: inherit;
+    @include media-breakpoint-up(lg) {
+    max-width: 153%;
+    left: 0;
+    transform: translateX(-18%);
+    position: absolute;
+    bottom: -5px;
+    }
   }
 
 	@include media-breakpoint-up(xl) {}
