--- a/sourse/pug/blocks/sExperts/_sExperts.pug
+++ b/sourse/pug/blocks/sExperts/_sExperts.pug
@@ -2,8 +2,32 @@ mixin sExperts(data)
 	// start sExperts
 	+b.SECTION.sExperts.section#sExperts&attributes(attributes)
 		.container
-			+b.section-title.text-center
-				h2 sExperts
-				
-			+e.row.row
+			+e.item.item_orange
+				+e.row.row
+					.col-lg-7
+						h2 Очный этап
+						p 40 лучших участников получат шанс представить свой проект представить свой проект на очной инвест-сессии перед экспертами!
+					+e.col.col
+						+img('img/experts-img.png').img
+			+e.item.item_white
+				+b.section-title.text-center
+					h2 Эксперты
+				+e.slider--js
+					+arrow
+					.swiper-wrapper
+						+e.slide.swiper-slide
+							+card('Мансуров Олег Геннадьевич', 'Генеральный директор космической компании SR Space. Создатель и руководитель программы  по развитию предпринимательства «Преактум». Преподаватель в Московском политехническом  университете предмет «Трансфер технологий и технологическое предпринимательство». Разработчик проекта «Цифровой прорыв»')
+						+e.slide.swiper-slide
+							+card('Мансуров Олег Геннадьевич', 'Генеральный директор космической компании SR Space. Создатель и руководитель программы  по развитию предпринимательства «Преактум».')
+						+e.slide.swiper-slide
+							+card('Мансуров Олег Геннадьевич', 'Генеральный директор космической компании SR Space. Создатель и руководитель программы  по развитию предпринимательства «Преактум». Преподаватель в Московском политехническом  университете предмет «Трансфер технологий и технологическое предпринимательство». Разработчик проекта «Цифровой прорыв»')
+						+e.slide.swiper-slide
+							+card('Мансуров Олег Геннадьевич', 'Генеральный директор космической компании SR Space. Создатель и руководитель программы  по развитию предпринимательства «Преактум». ')
 	// end sExperts
+
+mixin card(name, text)
+	+b.person-card
+		+e.img-wrap.text-center: +img('img/sExpert-img.png')
+		+e.content.text-center
+			+e.name!= name
+			+e.text!= text
