--- a/sourse/pug/blocks/sFAQ/_sFAQ.pug
+++ b/sourse/pug/blocks/sFAQ/_sFAQ.pug
@@ -2,6 +2,7 @@ mixin sFAQ(data)
 	// start sFAQ
 	+b.SECTION.sFAQ.section#sFAQ&attributes(attributes)
 		+e.container.container
+			+img('img/coins-2.png').img
 			+img('img/sFAQ-bg-1.png').bg
 			+b.section-title
 				h2 Часто задаваемые вопросы:
