--- a/sourse/pug/blocks/sRegistration/_sRegistration.pug
+++ b/sourse/pug/blocks/sRegistration/_sRegistration.pug
@@ -3,9 +3,10 @@ mixin sRegistration(data)
 	+b.SECTION.sRegistration.section#sRegistration&attributes(attributes)
 		+e.container.container
 			+e.wrap
+				+img('img/coins-2.png').img
 				+b.section-title.text-center
 					h2 Регистрация
-					p Регистрация на участие в программе проходит в два потока: 
+					p Регистрация на участие в программе проходит в два потока:
 				+e.row
 					.row
 						.col-lg
