--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -37,7 +37,7 @@ $grays: (
 
 // scss-docs-start color-variables
 $blue:    #0d6efd !default;
-$indigo:  #6610f2 !default;
+$indigo:  #494F90;
 $purple:  #6C36FE;
 $pink:    #d63384 !default;
 $red:     #EC4A27;
