--- a/sourse/pug/blocks/sDirections/_sDirections.scss
+++ b/sourse/pug/blocks/sDirections/_sDirections.scss
@@ -1,22 +1,89 @@
 // start .sDirections
 .sDirections {
-	// --sPT: #{rem()};
-	// --sPB: #{rem()};
-	// --sTPB: #{rem()};
+	--sPT: #{rem(0)};
+	--sPB: #{rem(6)};
+	--sTPB: #{rem(90)};
 	
 	&__row{
 		// --bs-gutter-x: #{rem()};
-		// --bs-gutter-y: #{rem()};
+		--bs-gutter-y: #{rem(0)};
+
+    position: relative;
+    z-index: 1;
+
+    &:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 50%;
+      height: 1px;
+      background: #b1b1b1;
+      z-index: 0;
+    }
+
+    &:before {
+      @include media-breakpoint-up(lg) {
+        content: '';
+        position: absolute;
+        top: 175px;
+        left: 50%;
+        width: 1px;
+        height: 80%;
+        background: #b1b1b1;
+        z-index: 0;
+      }
+    }
 	}
+
 	.section-title{
-		
+    color: $indigo;
 	}
-	&__col{
-		
-	}
-	&__item{
-		
-	}
+
+  .container {
+    position: relative;
+    z-index: 1;
+    &::before {
+      content: '';
+      position: absolute;
+      top: -60px;
+      left: -60px;
+      width: calc( 100% + 60*2px);
+      height: 200px;
+      z-index: -1;
+      border-radius: rem(60);
+      background: $body-bg;
+    }
+  }
+
+  &__col:first-child .direction-item::before {
+    
+    @include media-breakpoint-up(md) {
+    content: '';
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    width: 100%;
+    height: 1px;
+    background: #b1b1b1;
+    z-index: -1;
+    }
+  }
+
+  .btn {
+    font-weight: 700;
+    font-size: 20px;
+    cursor: unset;
+    --bs-btn-padding-y: #{rem(26)};
+    --bs-btn-padding-x: #{rem(46)};
+    position: relative;
+    z-index: 2;
+    @include media-breakpoint-up(md) {
+      transform: translateY(-50%);
+    }
+
+  }
 
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
@@ -26,3 +93,38 @@
 	@include media-breakpoint-only(xl) {}
 	@include media-breakpoint-down(xl) {}
 } // end.sDirections
+
+.direction-item {
+  img {
+    border-radius: 50%;
+    background: $orange;
+    margin-bottom: rem(20);
+    max-width: 100%;
+  }
+  position: relative;
+  z-index: 0;
+  padding-bottom: 60px;
+	@include media-breakpoint-up(md) {
+    padding-bottom: 100px;
+  }
+  
+  &:after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 1px;
+    height: 50%;
+    background: #b1b1b1;
+    z-index: -1;
+  }
+  
+
+  &__text {
+    font-weight: 500;
+    font-size: rem(23);
+    text-align: center;
+    padding: rem(5) 0;
+    background: #F2F2F2;
+  }
+}
