--- a/sourse/pug/blocks/sPartners/_sPartners.scss
+++ b/sourse/pug/blocks/sPartners/_sPartners.scss
@@ -1,7 +1,7 @@
 // start .sPartners
 .sPartners {
 	--sPT: #{rem(30)};
-	--sPB: #{rem(37)};
+	--sPB: #{rem(87)};
 	--sTPB: 0;
 	&__wrap {
 		background-color: $red;
@@ -51,6 +51,7 @@
 			font-weight: 700;
 			background-color: $green;
 			padding: rem(10) rem(16);
+      border-radius: rem(100);
 
 			left: 50%;
 			bottom: rem(-63);
