--- a/sourse/pug/blocks/sReviews/_sReviews.scss
+++ b/sourse/pug/blocks/sReviews/_sReviews.scss
@@ -1,12 +1,13 @@
 // start .sReviews
 .sReviews {
-	// --sPT: #{rem()};
-	// --sPB: #{rem()};
-	// --sTPB: #{rem()};
+	--sPT: #{rem(25)};
+	--sPB: #{rem(50)};
+	--sTPB: #{rem(64)};
 	
 	&__row{
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
+    position: relative;
 	}
 	.section-title{
 		
@@ -14,9 +15,88 @@
 	&__col{
 		
 	}
-	&__item{
-		
+  .swiper-slide {
+    height: auto;
+  }
+
+  &__item {
+		&:nth-child(2) {
+      margin-top: rem(-60);
+      min-height: 60%;
+    }
 	}
+
+  .puzzles {
+    @include media-breakpoint-up(lg) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    max-width: rem(380);
+    transform: translate(20%, -40%) rotate(170deg) scale(1, -1);
+    // z-index: 2;
+    }
+
+    @include media-breakpoint-down(lg) {
+      display: none;
+    }
+  }
+
+  .item_green {
+		position: relative;
+    background: $green;
+    border-radius: rem(30) rem(30) 0 0;
+    color: $white;
+    padding: rem(29);
+    padding-bottom: rem(80);
+    @include media-breakpoint-up(lg) {
+      padding: rem(38) rem(38);
+      border-radius: rem(60) rem(60) 0 0;
+      padding-bottom: rem(100);
+    }
+  }
+
+  .item_white {
+    background: $white;
+    border-radius: rem(30);
+    padding: rem(20);
+    position: relative;
+    z-index: 2;
+    @include media-breakpoint-up(lg) {
+      border-radius: rem(60);
+      padding: rem(30) rem(39);
+    }
+
+    p {
+      font-weight: 500;
+      line-height: 1.2;
+    }
+
+    a {
+      color: $green;
+      font-weight: 700;
+    }
+  }
+
+  &__person {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: rem(33);
+    .img {
+      border-radius: 50%;
+      width: rem(164);
+      aspect-ratio: 1/1;
+    }
+    .text {
+      font-weight: 700;
+      font-size: rem(24);
+      line-height: 110%;
+    }
+  }
+
+  &__slider--js {
+    // overflow: hidden;
+  }
 
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
