--- a/sourse/pug/blocks/sReviews/_sReviews.pug
+++ b/sourse/pug/blocks/sReviews/_sReviews.pug
@@ -20,16 +20,16 @@ mixin sReviews(data)
 							p Проект "Lion Craft" авторские изделия из натуральной кожи с целью запуска новой линейки продуктов shoper для женщин, которые все успевают и дома и на работе. Это прям про меня.
 							p Евгений демонстрировал свои изделия, с горящими глазами рассказывал как для него это важно и почему он хочет запустить новую линейку продуктов. Фишка автора в том, что не смотря на страх, он все равно идет к своей цели.<br>И после проекта, Евгений поделился со мной, что запускает в работу смм специалиста, начинает продумывать стратегию развития личного бренда, решил уже, что именно будет делегировать в работе и обязательно пойдет на следующий поток бизнес поколения.
 							p Я всегда давала конструктивную объективную обратную связь по запросу наставляемого, моя задача была – сохранить направление совместной работы, оставаясь в границах наставничества читать полностью..
-					//- +e.slide.swiper-slide
-					//- 	+e.item.item_green
-					//- 		+e.row.row
-					//- 			+e.col-lg-7
-					//- 				+e.person
-					//- 					+img('img/sExpert-img.png').img
-					//- 					.text Дмитрий Корековцев<br>супервизор 2 поток
-					//- 			+e.col.col
-					//- 				+img('img/puzzles.png').puzzles
-					//- 	+e.item.item_white.crop-text--js
+					+e.slide.swiper-slide
+						+e.item.item_green
+							+e.row.row
+								+e.col-lg-7
+									+e.person
+										+img('img/sExpert-img.png').img
+										.text Дмитрий Корековцев<br>супервизор 2 поток
+								+e.col.col
+									+img('img/puzzles.png').puzzles
+						+e.item.item_white.crop-text--js
 							p Уникальный способ неформального обучения, повышающий продуктивность человека - это наставничество.<br>Такой вид взаимодействия помогает расти в карьере, строить прочные отношения с окружающими, получать удовлетворение от жизни. Вот почему я согласилась участвовать в проекте и стала "Лучшим наставником". Поделюсь своим опытом на проекте. У меня было более 15 наставляемых, и каждый бизнес проект, идея участников по-своему уникальные и сильные. Больше всего в моей обратной связи и экспертном мнении нуждался Пономарев Евгений, он пришел с очень сильной идеей и чем больше мы работали, тем больше я погружалась в его бизнес.
 							p Уникальный способ неформального обучения, повышающий продуктивность человека - это наставничество.<br>Такой вид взаимодействия помогает расти в карьере, строить прочные отношения с окружающими, получать удовлетворение от жизни. Вот почему я согласилась участвовать в проекте и стала "Лучшим наставником". Поделюсь своим опытом на проекте. У меня было более 15 наставляемых, и каждый бизнес проект, идея участников по-своему уникальные и сильные. Больше всего в моей обратной связи и экспертном мнении нуждался Пономарев Евгений, он пришел с очень сильной идеей и чем больше мы работали, тем больше я погружалась в его бизнес.
 
