--- a/sourse/pug/blocks/sReviews/_sReviews.scss
+++ b/sourse/pug/blocks/sReviews/_sReviews.scss
@@ -3,17 +3,15 @@
 	--sPT: #{rem(25)};
 	--sPB: #{rem(50)};
 	--sTPB: #{rem(64)};
-	
+
 	&__row{
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
     position: relative;
 	}
-	.section-title{
-		
-	}
-	&__col{
-		
+
+	.container {
+    overflow: hidden;
 	}
   .swiper-slide {
     height: auto;
@@ -22,7 +20,9 @@
   &__item {
 		&:nth-child(2) {
       margin-top: rem(-60);
-      min-height: 60%;
+      @include media-breakpoint-up(lg) {
+        min-height: 60%;
+      }
     }
 	}
 
@@ -32,7 +32,7 @@
     top: 0;
     right: 0;
     max-width: rem(380);
-    transform: translate(20%, -40%) rotate(170deg) scale(1, -1);
+    transform: translate(10%, -40%) rotate(170deg) scale(1, -1);
     // z-index: 2;
     }
 
