feat: add arrow in Review slider and fix gap

--- a/sourse/pug/blocks/sReviews/_sReviews.pug
+++ b/sourse/pug/blocks/sReviews/_sReviews.pug
@@ -4,6 +4,7 @@ mixin sReviews(data)
 		.container
 			+b.section-title.text-center
 				h2 Отзывы участников<br>прошлого года
+				+arrow
 			+e.slider--js
 				.swiper-wrapper
 					+e.slide.swiper-slide
