--- a/sourse/pug/blocks/sExperts/_sExperts.pug
+++ b/sourse/pug/blocks/sExperts/_sExperts.pug
@@ -27,7 +27,7 @@ mixin sExperts(data)
 
 mixin card(name, text)
 	+b.person-card
-		+e.img-wrap.text-center: +img('img/sExpert-img.png')
+		+e.img-wrap.text-center: +img(`img/speaker-2.png`)
 		+e.content.text-center
 			+e.name!= name
 			+e.text!= text
