--- a/sourse/pug/blocks/sSpeakers/_sSpeakers.pug
+++ b/sourse/pug/blocks/sSpeakers/_sSpeakers.pug
@@ -13,7 +13,7 @@ mixin sSpeakers(data)
 				+speakerCard(2, 'Семен Теняев', 'Основатель TenChat')
 				+speakerCard(6, 'Снежанна Манько', 'Совладелец имидж-лаборатории Персона в Москве')
 				+speakerCard(5, 'Никита Прохоров', 'Основатель компаний №1 по репутации в сети, Автор трех бестселлеров, Проекты Reputation Lab, Sidorin Lab, Reputation House, Владелец бизнесов с оценкой 20+ M USD')
-				+speakerCard(4, 'Павел Вербняк', 'Международный тренер-консультант по личной эффективности, мотивации и психологии успеха. Основатель и руководитель проекта "Успешное мышление"')
+				//- +speakerCard(4, 'Павел Вербняк', 'Международный тренер-консультант по личной эффективности, мотивации и психологии успеха. Основатель и руководитель проекта "Успешное мышление"')
 	// end sSpeakers
 
 mixin speakerCard(img, title, text)
