--- a/sourse/pug/blocks/sExperts/_sExperts.scss
+++ b/sourse/pug/blocks/sExperts/_sExperts.scss
@@ -3,103 +3,133 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	--sTPB: #{rem(80)};
-	
-	&__row{
+
+	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
 	}
-  position: relative;
-  z-index: 2;
-	.section-title{
-		
+	position: relative;
+	z-index: 2;
+	.section-title {
 	}
-	&__col{
+	&__col {
 	}
-	&__item{
+	&__item {
 		&:nth-child(2) {
-      margin-top: rem(-50);
-    }
+			margin-top: rem(-50);
+		}
 
-    p {
-      max-width: rem(579);
-      margin-top: rem(14);
-    }
+		p {
+			max-width: rem(579);
+			margin-top: rem(14);
+		}
 	}
-  .item_orange {
+	.item_orange {
 		position: relative;
-    background: $orange;
-    border-radius: rem(30) rem(30) 0 0;
-    color: $white;
-    padding: rem(75) rem(30);
-    padding-bottom: 0;
-    @include media-breakpoint-up(lg) {
-      padding: rem(85) rem(59);
-      border-radius: rem(60) rem(60) 0 0;
-      padding-bottom: rem(120);
-    }
-  }
-  .item_white {
-    background: $white;
-    border-radius: rem(30);
-    padding: rem(85) rem(30);
-    position: relative;
-    z-index: 2;
-    @include media-breakpoint-up(lg) {
-      padding: rem(95) rem(59);
-      padding-bottom: rem(80);
-      border-radius: rem(60);
-    }
-  }
+		background: $orange;
+		border-radius: rem(30) rem(30) 0 0;
+		color: $white;
+		padding: rem(75) rem(30);
+		padding-bottom: 0;
+		@include media-breakpoint-up(lg) {
+			padding: rem(85) rem(59);
+			border-radius: rem(60) rem(60) 0 0;
+			padding-bottom: rem(120);
+		}
+	}
+	.item_white {
+		background: $white;
+		border-radius: rem(30);
+		padding: rem(85) rem(30);
+		position: relative;
+		z-index: 2;
+		@include media-breakpoint-up(lg) {
+			padding: rem(95) rem(59);
+			padding-bottom: rem(80);
+			border-radius: rem(60);
+		}
+	}
 
-  .img {
-    max-width: 100%;
-  }
+	.img {
+		max-width: 100%;
+	}
 
 	@include media-breakpoint-up(lg) {
-    .img {
-      position: absolute;
-      bottom: -20px;
-      right: 20px;
-    }
-  }
+		.img {
+			position: absolute;
+			bottom: -20px;
+			right: 20px;
+		}
+	}
 
+	&__slider--js {
+		overflow: hidden;
+	}
 
-  &__slider--js {
-    overflow: hidden;
-  }
-
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sExperts
 
 .person-card {
-  height: 100%;
-  img {
-    width: rem(278);
-    max-width: 80%;
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-    margin-bottom: rem(20);
-  }
+	height: 100%;
+	img {
+		// width: rem(278);
+		max-width: 100%;
+		// aspect-ratio: 1/1;
+		// border-radius: 50%;
+		// margin-bottom: rem(20);
+	}
 
-  &__name {
-    font-weight: 700;
-    font-size: rem(25);
-    margin-bottom: rem(4);
-  }
+	&__img-wrap {
+		margin-bottom: rem(20);
+		position: relative;
+		z-index: 1;
+		width: rem(324);
+		max-width: 100%;
+		border-radius: 0 0 46% 46%;
+		overflow: hidden;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 20px;
 
-  &__content {
-    position: relative;
-    max-width: rem(400);
-    margin: auto;
-  }
+		&::before {
+			content: "";
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			aspect-ratio: 1;
+			// height: rem(324);
+			background: $green;
+			border-radius: 50%;
+			z-index: -1;
+		}
+	}
+	&__name {
+		font-weight: 700;
+		font-size: rem(25);
+		margin-bottom: rem(4);
+	}
 
-  &__text {
-    font-weight: 500;
-  }
+	&__content {
+		position: relative;
+		max-width: rem(400);
+		margin: auto;
+	}
+
+	&__text {
+		font-weight: 500;
+	}
 }
