--- a/sourse/pug/blocks/sReviews/_sReviews.scss
+++ b/sourse/pug/blocks/sReviews/_sReviews.scss
@@ -10,8 +10,16 @@
 		position: relative;
 	}
 
+	@include media-breakpoint-down(lg) {
+		.swiper-button-hand {
+			top: 7rem;
+		}
+	}
 	.section-title {
 		position: relative;
+		@include media-breakpoint-down(lg) {
+			padding-bottom: 1rem;
+		}
 	}
 	.container {
 		overflow: hidden;
